--- a/sass/overall.scss
+++ b/sass/overall.scss
@@ -3,6 +3,8 @@ $overall_margin: 10px 20px 20px 20px;
 $project_font: 'Shrikhand';
 $content_font: 'Roboto';
 
+$header_background: #FFF;
+
 $bg_light: #F6F6F6;
 
 $feat_icon_color: #7E7E7E;
