:fix: fixed comment

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,8 +1,4 @@
-/*
- *
- * Overall header
- *
- */
+/* Overall header */
 @import 'overall.scss'
 
 /* Pages header first target mobile, see the media query below */
