:refactor: overall.sass has been sorted

--- a/sass/features.sass
+++ b/sass/features.sass
@@ -9,7 +9,7 @@
     &__item
       margin-bottom: 20px
       padding: 25px 30px 25px 40px
-      background-color: $bg_light
+      background-color: $background_grey_alt_2
       box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
       border-radius: 25px
       font-family: $content_font
