--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,7 +11,6 @@ body
   /** Text rules */
   p
     font-family: $content_font
-
   .text-medium
     font-weight: 700
   a.link-black
@@ -21,9 +20,9 @@ body
 
   /** Backgrounds helpers */
   .bg-light
-    background-color: #EAEAEA
+    background-color: $background_grey_alt_1
   .bg-light-alt
-    background-color: #F6F6F6
+    background-color: $background_grey_alt_2
 
 
   /** Pages sections titles */
