:refactor: sorted css rules, using BEM for restaurants list on homepage

--- a/sass/features.sass
+++ b/sass/features.sass
@@ -45,7 +45,8 @@
   .features
     &__item
       margin-left: 20px
-      width: 85%
+      margin-bottom: 40px
+      width: 89.5%
 
 /* Targets tablets */
 @media(min-width: 992px) and (max-width: 1200px)
