--- a/sass/overall.scss
+++ b/sass/overall.scss
@@ -15,5 +15,7 @@ $feat_circle_bg: #9356DC;
 $feat_hover_bg: #F5EDFF;
 $feat_hover_icon_color: #9356DC;
 
+/* Related to the " restaurants " section */
+$new_label_bg_color: #99E2D0;
 
 $cards_shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
