--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -5,7 +5,7 @@
  */
 @import 'overall.scss'
 /* General rules targeting mobile first */
-section.restaurants
+.restaurants
   background-color: #F6F6F6
   padding: 30px 0 40px 0
   font-family: $content_font
@@ -13,72 +13,71 @@ section.restaurants
     padding: 0 0 0 30px
   .restaurant
     padding: 0 30px 0 30px
-    .card
+    &__card--restaurant
       width: 100%
       margin-bottom: 20px
-    /* """ Restaurants """ cards  images integration */
-    img
-      width: 100%
-      height: 200px
-      object-fit: cover
-      border-radius: 25px 25px 0 0
-    .flex
-      display: flex
-    /* """ Restaurants cards content is a flex line */
-    .flex div:first-of-type
-      flex: 1
-    .flex div:last-of-type
-      margin: 25px 25px 0 0
-      font-size: 20px
-      /* """ Nouveau """ label */
-    .new
-      position: absolute
-      margin-top: 20px
-      padding: 5px 8px 5px 8px
-      background-color: #99E2D0
-      font-family: $content_font
-      font-weight: 500
-      color: #2DA285
-    /* Card title */
-    h3
-      font-family: $content_font
-      font-size: 18px
-      margin-bottom: 0px
-      font-weight: 700
-      margin-left: 15px
-    /* Card paragraphs */
-    p
-      margin-left: 15px
-      margin-top: 5px
-      padding-bottom: 0px
-      font-family: $content_font
-      font-size: 15px
-      color: #555
-
+      /* Card title */
+      h3
+        font-family: $content_font
+        font-size: 18px
+        margin-bottom: 0px
+        font-weight: 700
+        margin-left: 15px
+      /* Card paragraphs */
+      p
+        margin-left: 15px
+        margin-top: 5px
+        padding-bottom: 0px
+        font-family: $content_font
+        font-size: 15px
+        color: #555
+      /* """ Restaurants cards content is a flex line */
+      .flex div:first-of-type
+        flex: 1
+      .flex div:last-of-type
+        margin: 25px 25px 0 0
+        font-size: 20px
+      /* """ Restaurants """ cards  images integration */
+      img
+        width: 100%
+        height: 200px
+        object-fit: cover
+        border-radius: 25px 25px 0 0
+      /* "" Nouveau label "" */
+      &__new
+        position: absolute
+        margin-top: 20px
+        padding: 5px 8px 5px 8px
+        background-color: $new_label_bg_color
+        font-family: $content_font
+        font-weight: 500
+        color: #2DA285
 
 /* Targets extra small screens */
 @media (max-width: 768px)
   .restaurant
-    .card
-      .new
-        right: 40px
+    &__card--restaurant
+      &__new
+        right: 15px
         margin: 20px 15px 15px 20px
         padding: 5px 8px 5px 8px
 
 /* Targets small screens */
 @media (min-width: 768px) and (max-width: 992px)
-  section.restaurants
+  .restaurants
     /* """ Restaurants """ card element */
     .restaurant
-      .card
-        .new
+      &__card--restaurant
+        &__new
+          right: 15px
           margin: 20px 30px 15px 20px
           padding: 5px 8px 5px 8px
 
 /* Targets tablets & desktops */
 @media(min-width: 992px)
-  section.restaurants
-    .restaurants-container
+  .restaurants
+    /* A container written to make elements flex */
+    &__restaurants-container
       display: flex
       margin: auto
       flex-wrap: wrap
@@ -91,10 +90,10 @@ section.restaurants
       .restaurant
         padding: 0
         width: 49%
-        .card
+        &__card--restaurant
           width: 100%
           margin-bottom: 30px
-          .new
+          &__new
             margin: 20px -20px 15px 25px
             padding: 5px 8px 5px 8px
           img
@@ -106,23 +105,21 @@ section.restaurants
 
 /* Targets large screens */
 @media(min-width: 1200px)
-  header
-    position: fixed
-  section.restaurants
+  .restaurants
     h2
      width: 100%
      text-align: center
      margin: 35px 0 35px 0
      padding: 0
-    .restaurants-container
+    &__restaurants-container
       display: flex
       align-items: center
-    .restaurant
-      padding: 0
-      width: 49%
-      .card
+      .restaurant
+        padding: 0
+        width: 49%
+      &__card--restaurant
         width: 100%
         img
          height: 300px
-        .new
+        &__new
           margin-left: 15px
