:nothing: rewritten comments

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -1,8 +1,4 @@
-/*
- *
- * Overall footer
- *
- */
+/* Overall footer */
 @import 'overall.scss'
 footer
   padding: 15px 0 15px 30px
@@ -23,6 +19,6 @@ footer
       font-weight: 500
       a
         color: #fff
-        text-decoration: none 
+        text-decoration: none
     &-icon-i
       margin-right: 10px
