--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -1,8 +1,4 @@
-/*
- *
- * Homepage restaurant list
- *
- */
+/* Homepage restaurant list */
 @import 'overall.scss'
 /* General rules targeting mobile first */
 .restaurants
