--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -1,8 +1,4 @@
-/*
- *
- * Overall restaurant menu container
- *
- */
+/* Overall restaurant menu container */
 @import 'overall.scss'
 
 /* Make the " check icon " area to appear */
