--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -6,7 +6,8 @@
   padding: 30px 0 90px 0
   font-family: $content_font
   h2
-    padding: 0 0 0 30px
+    margin-top: 30px
+    padding: 20px 0 0 30px
   .restaurant
     padding: 0 30px 0 30px
     &__card--restaurant
