--- a/sass/features.sass
+++ b/sass/features.sass
@@ -6,6 +6,7 @@
     padding: 20px 25px 50px 40px
     h2
       margin: 25px 0 30px -15px
+    /* Features items */
     &__item
       margin-bottom: 20px
       padding: 25px 30px 25px 40px
