--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -9,7 +9,8 @@
     margin-top: 30px
     padding: 20px 0 0 30px
   .restaurant
-    padding: 0 30px 0 30px
+    padding: 0 30px 0 300px
+    /* Card specific to restaurants */
     &__card--restaurant
       width: 100%
       margin-bottom: 20px
