:feat: support fort 375px width screen

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -54,6 +54,13 @@ section.head
   .action-button-container
     margin-top: 50px
 
+
+/* Target extra small screens */
+@media (min-width: 0px) and (max-width: 576px)
+  header
+    .header__img
+      width: 190px
+
 /* Target both tablet and desktop */
 @media (min-width: 992px)
   header
