--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -9,7 +9,7 @@
     margin-top: 30px
     padding: 20px 0 0 30px
   .restaurant
-    padding: 0 30px 0 300px
+    padding: 0 30px 0 30px
     /* Card specific to restaurants */
     &__card--restaurant
       width: 100%
@@ -40,6 +40,7 @@
         width: 100%
         height: 200px
         object-fit: cover
+        object-position: 50% 50%
         border-radius: 25px 25px 0 0
       /* "" Nouveau label "" */
       &__new
@@ -51,16 +52,39 @@
         font-weight: 500
         color: #2DA285
 
-/* Targets extra small screens */
-@media (max-width: 768px)
+/*
+ * Targets small screens
+ * */
+@media (min-width: 0px) and (max-width: 576px)
+  .restaurants
+    .restaurant
+      &__card--restaurant
+        img
+          height: 176px
+        &__new
+          right: 15px
+          margin: 10px 30px 15px 20px
+
+@media (min-width: 576px) and (max-width: 768px)
+    .restaurants
+      .restaurant
+        /* """ Restaurants """ card element */
+        &__card--restaurant
+          img
+            height: 176px
+          &__new
+            right: 15px
+            margin: 10px 30px 15px 20px
+
+@media (max-width: 768px) and (min-width: 768px)
   .restaurant
+    /* """ Restaurants """ card element */
     &__card--restaurant
       &__new
         right: 25px
-        margin: 20px 15px 15px 20px
+        margin: 10px 15px 15px 20px
         padding: 5px 8px 5px 8px
 
-/* Targets small screens */
 @media (min-width: 768px) and (max-width: 991px)
   .restaurants
     /* """ Restaurants """ card element */
