--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -6,12 +6,12 @@
   from
     width: 0%
   to
-    width: 20%
+    width: 30%
 
 /* Make the " check icon " area to disapper */
 @keyframes growReverse
-  from
-    width: 20%
+  to
+    width: 30%
   to
     width: 0%
 
@@ -104,15 +104,24 @@
     &__title
       display: flex
       flex-direction: column
+      white-space: nowrap
+      text-overflow: ellipsis
+      overflow: hidden
       width: 80%
       padding: 10px
+      .text-medium
+        overflow: hidden
+        flex-direction: column
+        white-space: nowrap
+        text-overflow: ellipsis
     &__subtitle
-      width: calc(80%)
+      width: 100%
       margin-top: 10px
       white-space: nowrap
       white-space: nowrap
       overflow: hidden
       text-overflow: ellipsis
+      font-size: 13.5px
     &__price
       width: 20%
       display: flex
@@ -120,7 +129,8 @@
       justify-content: flex-end
       text-align: right
       margin-right: 25px
-      padding-bottom: 10px
+      padding-bottom: 12px
+      font-family: $content_font
 
     /* Check icon displayed on hover */
     &__icon
@@ -161,6 +171,34 @@
 
 .action-button-container
     margin-top: 50px
+
+
+/* Target extra small screens */
+@media (min-width: 0px) and (max-width: 576px)
+  /* Make the " check icon " area to appear */
+  @keyframes grow
+    from
+      width: 0%
+    to
+      width: 30%
+  /* Make the " check icon " area to disapper */
+  @keyframes growReverse
+    from
+      width: 30%
+    to
+      width: 0%
+  .menu
+    .menu-card
+      &__title
+        font-size: 25px
+    &__title
+      display: flex
+      flex-direction: column
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
+      width: 90%
+      padding: -10px
 
 @media (min-width: 1200px)
   .container-d-flex
